--- a/app.json
+++ b/app.json
@@ -24,7 +24,7 @@
             "value": ""
         },
         "PASTEBIN_API_KEY": {
-            "description": "Your PasteBin api key, from https://pastebin.com/doc_api#1",
+            "description": "doiY34RxmsN7iBLKW-jkm6UXkFmxhbwx",
             "value": ""
         },
         "PASTE_EXPIRY": {
