--- a/sample.env
+++ b/sample.env
@@ -9,11 +9,11 @@
 # PRIVATE_PASTE=NO     (NO, YES)
 
 # Mandatory Environment Variables
-API_ID=
-API_HASH=
-BOT_TOKEN=
-PASTEBIN_API_KEY=
+API_ID=29733445
+API_HASH=769047f976379f4e540539429c98b046
+BOT_TOKEN=5405166611:AAEWyg5pBQTwbYLc-IpmClTlYOXntCWDtgA
+PASTEBIN_API_KEY=doiY34RxmsN7iBLKW-jkm6UXkFmxhbwx
 
 # Extra Environment Variables
-PASTE_EXPIRY=
-PRIVATE_PASTE=
+PASTE_EXPIRY=10M
+PRIVATE_PASTE=No
