--- a/sample.env
+++ b/sample.env
@@ -16,4 +16,4 @@ PASTEBIN_API_KEY=doiY34RxmsN7iBLKW-jkm6UXkFmxhbwx
 
 # Extra Environment Variables
 PASTE_EXPIRY=10M
-PRIVATE_PASTE=No
+PRIVATE_PASTE=NO
